--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "date-fns": "^2.28.0",
+    "dotenv": "^16.0.1",
     "movie-trailer": "^2.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
